# rust-signer-v1

./: Cargo.toml  build.rs  cfg.toml  run.sh
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: a.rs  b.js  main copy.txt  main.rs  maintest.txt
src/bitcoin_mod/: signature.rs
src/comm/: mod.rs  wifi.rs
src/nvs/: memory.rs
src/ui/: display.rs
