[package]
name = "rust-signer-v1"
version = "0.1.0"
authors = ["JonasdeSouza <jonasdesouza28@github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rust-signer-v1"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.50", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
toml-cfg = "0.2.0"
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
display-interface-spi = "0.5.0"
heapless = "0.8.0"
bitcoin = "0.32.5"
anyhow = "1.0.95"
hex = "0.4.3"
base64 = "0.22.1"

[build-dependencies]
embuild = "0.33"
toml-cfg = "0.2.0"
